name:                scenario-measurement
version:             0.1.0.0
synopsis:            Benchmark Framework
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           2018 Koji Miyazato
category:            Benchmark
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     Scenario
  build-depends:       base         >=4.9 && <5,
                       mtl,
                       free,
                       deepseq,
                       vector,
                       containers,
                       gauge
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

benchmark scenario-example-ngram
  hs-source-dirs:      bench
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.9 && <5,
                       containers,
                       text,
                       deepseq,
                       gauge,
                       scenario-measurement
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
